--- a/遊記/MtSylvia/index.html
+++ b/遊記/MtSylvia/index.html
@@ -223,7 +223,7 @@ if (!doNotTrack) {
 
 
 
-        <span>Licensed under CC BY-SA 4.0</span>
+        <span>All Rights Reserved</span>
     </section>
     </footer>
 
