--- a/遊記/遊記-京都/index.html
+++ b/遊記/遊記-京都/index.html
@@ -289,7 +289,7 @@ PEACE HOSTEL的BAR，剛好有抽積木大賽，獎品啤酒一壺。
 
 
 
-        <span>Licensed under CC BY-SA 4.0</span>
+        <span>All Rights Reserved</span>
     </section>
     </footer>
 
