--- a/about/index.html
+++ b/about/index.html
@@ -247,7 +247,7 @@ if (!doNotTrack) {
 
 
 
-        <span>Licensed under CC BY-SA 4.0</span>
+        <span>All Rights Reserved</span>
     </section>
     </footer>
 
