--- a/遊記/MtJade/index.html
+++ b/遊記/MtJade/index.html
@@ -361,7 +361,7 @@ if (!doNotTrack) {
 
 
 
-        <span>Licensed under CC BY-SA 4.0</span>
+        <span>All Rights Reserved</span>
     </section>
     </footer>
 
