--- a/DwarfFortress/tutorialIdex/index.html
+++ b/DwarfFortress/tutorialIdex/index.html
@@ -218,7 +218,7 @@ if (!doNotTrack) {
         
 
         <div class="article-details">
-            <h2 class="article-title">矮人要塞Walkthrough教程 第二章、工坊、家具與階梯</h2>
+            <h2 class="article-title">矮人要塞Walkthrough教程：第二章、工坊，家具與階梯</h2>
         </div>
     </a>
 </article>
@@ -236,7 +236,7 @@ if (!doNotTrack) {
         
 
         <div class="article-details">
-            <h2 class="article-title">矮人要塞Walkthrough教程 第一章 整裝待發</h2>
+            <h2 class="article-title">矮人要塞Walkthrough教程：第一章、整裝待發</h2>
         </div>
     </a>
 </article>
