--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@ if (!doNotTrack) {
 
     
     <h3 class="article-subtitle">
-        矮人要塞是一款極為有趣並複雜的遊戲，其中最困難的莫過於進入這個世界。雖然找到教學並不困難，但它們多數假設受眾已經有前備知識並知道自己要找什麼，它們也不太會考慮到不同的材質包與遊戲版本，以及一位新手獲得這些知識並開始第一座要塞的難度。但這些知識都可以在這系列PeridexisErrant’s DF Walkthrough中找到，包含一個預先產生的世界及存檔、以及完整的遊戲，只要下載便能開始。以及一堆的參考圖片，一堆！
+        矮人要塞(Dwarf Fortress, DF)是一款極為有趣並複雜的遊戲，其中最困難的莫過於進入這個世界。雖然找到教學並不困難，但它們多數假設受眾已經有前備知識並知道自己要找什麼，它們也不太會考慮到不同的材質包與遊戲版本，以及一位新手獲得這些知識並開始第一座要塞的難度。但這些知識都可以在這系列PeridexisErrant’s DF Walkthrough中找到，包含一個預先產生的世界及存檔、以及完整的遊戲，只要下載便能開始。以及一堆的參考圖片，一堆！
     </h3>
     
 
