--- a/DwarfFortress/tutorialIdex/index.html
+++ b/DwarfFortress/tutorialIdex/index.html
@@ -153,7 +153,7 @@ if (!doNotTrack) {
 
     <section class="article-content">
     <blockquote>
-<p>矮人要塞是我見過一款最不可思議的遊戲，簡樸的外表下潛藏著無比豐富而真實的內容，與其說是遊戲，玩家更像是在譜寫敘事詩的矮人祖靈</p>
+<p>矮人要塞(Dwarf Fortress, DF)是我見過一款最不可思議的遊戲，簡樸的外表下潛藏著無比豐富而真實的內容，與其說是遊戲，玩家更像是在譜寫敘事詩的矮人祖靈</p>
 </blockquote>
 <h2 id="翻譯教程">翻譯教程</h2>
 <h3 id="peridexiserrants-df-walkthroughhttpsdf-walkthroughreadthedocsioenlatest系列"><a class="link" href="https://df-walkthrough.readthedocs.io/en/latest/"  target="_blank" rel="noopener"
