--- a/about/index.html
+++ b/about/index.html
@@ -213,6 +213,7 @@ if (!doNotTrack) {
     >THE IDOLM@STER MILLION LIVE! 6thLIVE TOUR UNI-ON@IR!!!! 福岡</a> LV林口</p>
 <p>2019/11/09-10 CINDERELLA GIRLS 7thLIVE Special 3chord♪ Funky Dancing! ナゴヤドーム</p>
 </blockquote>
+<p>因為疫情而線上看的就先不列了，期望有一天日本再見。</p>
 <hr>
 <h3 id="艦これ--艦隊收藏">艦これ&ndash;艦隊收藏</h3>
 <p>退役提督，原本駐紮在大湊警備府，秘書艦：比叡(論及婚嫁)、北上大大、五月雨、曙(傲嬌萌)。</p>
@@ -222,6 +223,19 @@ if (!doNotTrack) {
 	>
 	<a href="https://i.imgur.com/0WmfUTM.jpg" >
 		<img src="https://i.imgur.com/0WmfUTM.jpg"
+			
+			
+			
+			loading="lazy"
+			>
+	</a>
+	
+</figure></p>
+<h3 id="某遊戲">某遊戲</h3>
+<p><figure 
+	>
+	<a href="https://osu-sig.vercel.app/card?user=3541250&amp;mode=mania&amp;lang=en&amp;animation=true&amp;hue=90" >
+		<img src="https://osu-sig.vercel.app/card?user=3541250&amp;mode=mania&amp;lang=en&amp;animation=true&amp;hue=90"
 			
 			
 			
@@ -392,6 +406,7 @@ if (!doNotTrack) {
         </li>
         <li><a href="#艦これ--艦隊收藏">艦これ&ndash;艦隊收藏</a></li>
         <li><a href="#idoly-pride">Idoly Pride</a></li>
+        <li><a href="#某遊戲">某遊戲</a></li>
       </ol>
     </li>
   </ol>
