--- a/ShinyColors/Index/index.html
+++ b/ShinyColors/Index/index.html
@@ -248,7 +248,7 @@ if (!doNotTrack) {
 
 
                 <time class="article-time--reading">
-                    0 minute read
+                    1 minute read
                 </time>
             </div>
         
@@ -258,7 +258,7 @@ if (!doNotTrack) {
 </header>
 
     <section class="article-content">
-    <p><a class="link" href="./%e3%81%93%e3%81%84%e3%83%90%e3%83%a9%e3%80%81%e4%b8%80%e8%bc%aa.csv" ></a></p>
+    <p><a class="link" href="./%e3%81%93%e3%81%84%e3%83%90%e3%83%a9%e3%80%81%e4%b8%80%e8%bc%aa.csv" >こいバラ、一輪</a></p>
 
 </section>
 
