--- a/ShinyColors/Index/index.html
+++ b/ShinyColors/Index/index.html
@@ -258,7 +258,16 @@ if (!doNotTrack) {
 </header>
 
     <section class="article-content">
-    <p><a class="link" href="https://youtube.com/playlist?list=PL8XIOD0zmpnPyosIi-8g1wKuEuyUEdGIo"  target="_blank" rel="noopener"
+    <div class="video-wrapper">
+    <iframe loading="lazy" 
+            src="https://www.youtube.com/embed/PL8XIOD0zmpnPyosIi-8g1wKuEuyUEdGIo" 
+            allowfullscreen 
+            title="YouTube Video"
+    >
+    </iframe>
+</div>
+
+<p><a class="link" href="https://youtube.com/playlist?list=PL8XIOD0zmpnPyosIi-8g1wKuEuyUEdGIo"  target="_blank" rel="noopener"
     >【ばら色ハーモニー】月岡恋鐘</a></p>
 <p><a class="link" href="/csv/%e3%81%93%e3%81%84%e3%83%90%e3%83%a9%e3%80%81%e4%b8%80%e8%bc%aa.csv" >こいバラ、一輪</a></p>
 <p><a class="link" href="/csv/%e3%81%99%ef%bd%9e%e3%81%a3%e3%81%a6%e3%80%81%ef%bc%95%e6%9c%88.csv" >す～って、５月</a></p>
