--- a/uncategorized/ry/index.html
+++ b/uncategorized/ry/index.html
@@ -55,7 +55,7 @@ if (!doNotTrack) {
         (function() {
             const colorSchemeKey = 'StackColorScheme';
             if(!localStorage.getItem(colorSchemeKey)){
-                localStorage.setItem(colorSchemeKey, "dark");
+                localStorage.setItem(colorSchemeKey, "auto");
             }
         })();
     </script><script>
