--- a/劍術/武装少女マキャヴェリズム-第九節-第十節-拔刀拔刀拔拔蜻蜓-看見師傅的美麗與哀愁-拔刀微考證/index.html
+++ b/劍術/武装少女マキャヴェリズム-第九節-第十節-拔刀拔刀拔拔蜻蜓-看見師傅的美麗與哀愁-拔刀微考證/index.html
@@ -110,7 +110,7 @@ if (!doNotTrack) {
         (function() {
             const colorSchemeKey = 'StackColorScheme';
             if(!localStorage.getItem(colorSchemeKey)){
-                localStorage.setItem(colorSchemeKey, "dark");
+                localStorage.setItem(colorSchemeKey, "auto");
             }
         })();
     </script><script>
