--- a/DwarfFortress/tutorialIndex/index.html
+++ b/DwarfFortress/tutorialIndex/index.html
@@ -164,7 +164,7 @@ if (!doNotTrack) {
 <p>Peridexis Errant是維護新手包的大佬，他寫的Walkthrough教學系列可說是一步一腳印，補齊所有DF裡的基礎常識。</p>
 <ul>
 <li><a class="link" href="/DwarfFortress/Walkthrough/chap01-setup-starting" >壹、整裝待發</a> (完成)</li>
-<li><a class="link" href="/DwarfFortress/Walkthrough/chap02-workshops-digging" >貳、工坊、家具與階梯</a> (施工)</li>
+<li><a class="link" href="/DwarfFortress/Walkthrough/chap02-workshops-digging" >貳、工坊、家具與階梯</a> (完成)</li>
 <li>參、從洞窟到家園</li>
 <li>肆、幾乎上軌道了！</li>
 <li>伍、工業革命</li>
