--- a/about/index.html
+++ b/about/index.html
@@ -154,21 +154,52 @@ if (!doNotTrack) {
 <li>Python: 中等(寫過幾個機器人)</li>
 <li>Verilog: 中等(修課用，當然不是VSD or ICLAB)</li>
 <li>git: 猴子(至少會修conflict)</li>
+<li>Synopsys IC Compiler™</li>
+<li>Linux</li>
 <li>$\LaTeX$: 修過論文</li>
 </ul>
 <h2 id="publication">Publication</h2>
 <p>沒有(剛送一篇學長的去DAC)。</p>
 <h2 id="嗜好">嗜好</h2>
 <h3 id="劍">劍</h3>
-<p>是個劍人，我有劍道二段及擊劍C級裁判，大概是國內少數跨著玩的。<br>
+<p>是個<em>劍人</em>，我有劍道二段及擊劍C級裁判，大概是國內少數跨著玩的。<br>
 <a class="link" href="https://youtu.be/BI0SUlwSEMI"  target="_blank" rel="noopener"
-    >全大運打台大</a></p>
+    >全大運打台大&lt;-可以先跳過1分鐘</a></p>
 <h3 id="童軍">童軍</h3>
 <p>Be prepared.
 領過吳兆棠、去過世界大露營(WSJ23)、還是個國花童軍，不過都不重要，重要的是<strong>人生以服務為目的</strong>。<br>
 然後也因為這樣愛上野外跟露營，營火的味道真是令人欲罷不能。</p>
+<h3 id="爬山">爬山</h3>
+<p>偶爾跟成大童軍出團、撿幾顆百岳。
+<figure 
+	>
+	<a href="https://1.bp.blogspot.com/-XZ-PHuMcB38/XVbF-o9wYhI/AAAAAAAAI-4/kdz_OOI-wawS99bQmdA9AldYDfePQWJdQCKgBGAs/s1600/DSCPDC_0002_BURST20190813051651683.JPG" >
+		<img src="https://1.bp.blogspot.com/-XZ-PHuMcB38/XVbF-o9wYhI/AAAAAAAAI-4/kdz_OOI-wawS99bQmdA9AldYDfePQWJdQCKgBGAs/s1600/DSCPDC_0002_BURST20190813051651683.JPG"
+			
+			
+			
+			loading="lazy"
+			>
+	</a>
+	
+</figure>
+爬玉山還下雪，上不去。</p>
 <h3 id="日文">日文</h3>
 <p>高中是日本文化研究社的，偶爾會做點遊戲翻譯。</p>
+<h3 id="音樂遊戲">音樂遊戲</h3>
+<p>別採白塊兒
+<figure 
+	>
+	<a href="https://osu-sig.vercel.app/card?user=3541250&amp;mode=mania&amp;lang=en&amp;animation=true&amp;hue=90" >
+		<img src="https://osu-sig.vercel.app/card?user=3541250&amp;mode=mania&amp;lang=en&amp;animation=true&amp;hue=90"
+			
+			
+			
+			loading="lazy"
+			>
+	</a>
+	
+</figure></p>
 <!-- raw HTML omitted -->
 <!-- raw HTML omitted -->
 <blockquote>
@@ -354,7 +385,9 @@ if (!doNotTrack) {
       <ol>
         <li><a href="#劍">劍</a></li>
         <li><a href="#童軍">童軍</a></li>
+        <li><a href="#爬山">爬山</a></li>
         <li><a href="#日文">日文</a></li>
+        <li><a href="#音樂遊戲">音樂遊戲</a></li>
       </ol>
     </li>
   </ol>
