--- a/about/index.html
+++ b/about/index.html
@@ -168,7 +168,19 @@ if (!doNotTrack) {
 <h3 id="童軍">童軍</h3>
 <p>Be prepared.
 領過吳兆棠、去過世界大露營(WSJ23)、還是個國花童軍，不過都不重要，重要的是<strong>人生以服務為目的</strong>。<br>
-然後也因為這樣愛上野外跟露營，營火的味道真是令人欲罷不能。</p>
+然後也因為這樣愛上野外跟露營，營火的味道真是令人欲罷不能。
+<figure 
+	>
+	<a href="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/128777448_3034823279951181_5960054526094177182_n.jpg?_nc_cat=107&amp;ccb=1-7&amp;_nc_sid=730e14&amp;_nc_ohc=8GIh1FbV0qYAX9V5PSY&amp;_nc_ht=scontent-tpe1-1.xx&amp;oh=00_AfA6dsh8uHp2GLrh0mAPd7zzNrC20i-WtFEWwumhiysygw&amp;oe=63B51B20" >
+		<img src="https://scontent-tpe1-1.xx.fbcdn.net/v/t1.6435-9/128777448_3034823279951181_5960054526094177182_n.jpg?_nc_cat=107&amp;ccb=1-7&amp;_nc_sid=730e14&amp;_nc_ohc=8GIh1FbV0qYAX9V5PSY&amp;_nc_ht=scontent-tpe1-1.xx&amp;oh=00_AfA6dsh8uHp2GLrh0mAPd7zzNrC20i-WtFEWwumhiysygw&amp;oe=63B51B20"
+			
+			
+			
+			loading="lazy"
+			>
+	</a>
+	
+</figure></p>
 <h3 id="爬山">爬山</h3>
 <p>偶爾跟成大童軍出團、撿幾顆百岳。
 <figure 
@@ -200,6 +212,11 @@ if (!doNotTrack) {
 	</a>
 	
 </figure></p>
+<h3 id="刷題">刷題</h3>
+<p><a class="link" href="https://github.com/TAKE72K/HDLPractice"  target="_blank" rel="noopener"
+    >RTL</a>真的強者都刷比賽題，顯然我不是
+<a class="link" href="https://github.com/TAKE72K/BocchiTheCode"  target="_blank" rel="noopener"
+    >C++</a></p>
 <!-- raw HTML omitted -->
 <!-- raw HTML omitted -->
 <blockquote>
@@ -388,6 +405,7 @@ if (!doNotTrack) {
         <li><a href="#爬山">爬山</a></li>
         <li><a href="#日文">日文</a></li>
         <li><a href="#音樂遊戲">音樂遊戲</a></li>
+        <li><a href="#刷題">刷題</a></li>
       </ol>
     </li>
   </ol>
