--- a/about/index.html
+++ b/about/index.html
@@ -214,7 +214,7 @@ if (!doNotTrack) {
 </figure></p>
 <h3 id="刷題">刷題</h3>
 <p><a class="link" href="https://github.com/TAKE72K/HDLPractice"  target="_blank" rel="noopener"
-    >RTL</a>真的強者都刷比賽題，顯然我不是
+    >RTL</a>  <del>真的強者都刷比賽題，顯然我不是</del><br>
 <a class="link" href="https://github.com/TAKE72K/BocchiTheCode"  target="_blank" rel="noopener"
     >C++</a></p>
 <!-- raw HTML omitted -->
