--- a/EDA/MORLPlace/index.html
+++ b/EDA/MORLPlace/index.html
@@ -186,7 +186,7 @@ $r_\omega=\text{R}(\textbf{r},\omega)=\sum_{i=1}^{K}r^{(i)}\omega_i$，$\omega\i
 MDP$\mathcal{M}^\omega$中的action與state則可以用$\omega$索引：$(s;\omega)$、$(a,\omega)$。<br>
 <br>
 接下來討論MOMDP的解，解一個MOMDP相等於解每個獨立的MDP$\mathcal{M}^\omega$，亦即找出使初始狀態value，$J(\omega,\pi_\omega)=V_{\pi_\omega}(s_0;\omega)$，最大的一組策略$\pi_\omega$。<br>
-我們將這樣的策略組稱為：<strong>parametric policy family</strong>，定義為由$\theta$連續參數的一組策略集$\pi_{\omega,\theta}$。</p>
+我們將這樣的策略組稱為：**parametric policy family**，定義為由$\theta$連續參數的一組策略集$\pi_{\omega,\theta}$。</p>
 <p>在接下去之前，先介紹一個概念：Pareto optimality，這是一種每一項指標都最適化的情況，無法在不減少任何一個指標的前提下進一步優化。
 如果我們針對多目標的最佳化，每一個在平面上滿足Pareto optimalty的點會組成一條邊界，我們稱為Pareto frontier。</p>
 <h2 id="方法">方法</h2>
