--- a/note/LaTexPseudoCode/index.html
+++ b/note/LaTexPseudoCode/index.html
@@ -188,8 +188,8 @@ if (!doNotTrack) {
 <p>不過這樣好像少了什麼&hellip;沒錯，帥氣的名字！<br>
 這時便是使用algorithm的時刻：</p>
 <pre tabindex="0"><code class="language-Latex=" data-lang="Latex=">\begin{algorithm}
-\caption{FireBall}\label{fireball}
-\begin{algorithmic}
+\caption{FireBall}\label{fireball} % \caption{演算法標題}
+\begin{algorithmic}[1] % 後面接[1]會產生行號
 
 \State $MP \gets 50$
 
