--- a/EDA/MORLPlace/index.html
+++ b/EDA/MORLPlace/index.html
@@ -15,18 +15,17 @@
 <meta name="twitter:description" content="用於晶片擺置的靈活性多目標強化學習 link to paper 為了EDA Workshop看的。 本篇的亮點\貢獻： 提出彈性多目標的強化學習(flexible multiple-objective reinforcement learning, MORL)">
     <link rel="shortcut icon" href="/ico/sword.png" />
 
-<script type="application/javascript">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KLK0L2ZM78"></script>
+<script>
 var doNotTrack = false;
 if (!doNotTrack) {
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-	ga('create', 'UA-131269345-3', 'auto');
-	
-	ga('send', 'pageview');
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-KLK0L2ZM78', { 'anonymize_ip': false });
 }
-</script><style>
+</script>
+<style>
     :root {
         --sys-font-family: "New Tegomin", -apple-system, BlinkMacSystemFont, "Segoe UI", "Droid Sans", "Helvetica Neue";
         --article-font-family: "Noto Serif TC", var(--base-font-family);
@@ -44,6 +43,8 @@ if (!doNotTrack) {
 		    document.head.appendChild(customFont);
 		}());
 </script>
+
+
     </head>
     <body class="
     article-page has-toc
