--- a/note/dockerInstall/index.html
+++ b/note/dockerInstall/index.html
@@ -15,18 +15,17 @@
 <meta name="twitter:description" content="Docker feat. CentOS 7 安裝 sudo yum-config-manager --add-repo=https://download.docker.com/linux/centos/docker-ce.repo sudo yum repolist -v #Now you can observe the packages available from the docker-ce repo sudo yum install -y https://download.docker.com/linux/centos/7/x86_64/stable/Packages/containerd.io-1.4.3-3.1.el7.x86_64.rpm sudo yum install docker-ce -y sudo systemctl --now enable docker 測試安裝 sudo docker run --rm hello-world 應該輸出: Hello from Docker! This message shows that your installation appears to be working correctly. To generate this">
     <link rel="shortcut icon" href="/ico/sword.png" />
 
-<script type="application/javascript">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KLK0L2ZM78"></script>
+<script>
 var doNotTrack = false;
 if (!doNotTrack) {
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-	ga('create', 'UA-131269345-3', 'auto');
-	
-	ga('send', 'pageview');
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-KLK0L2ZM78', { 'anonymize_ip': false });
 }
-</script><style>
+</script>
+<style>
     :root {
         --sys-font-family: "New Tegomin", -apple-system, BlinkMacSystemFont, "Segoe UI", "Droid Sans", "Helvetica Neue";
         --article-font-family: "Noto Serif TC", var(--base-font-family);
@@ -44,6 +43,8 @@ if (!doNotTrack) {
 		    document.head.appendChild(customFont);
 		}());
 </script>
+
+
     </head>
     <body class="
     article-page has-toc
