--- a/遊記/MtJade/index.html
+++ b/遊記/MtJade/index.html
@@ -28,18 +28,17 @@
     <meta name="twitter:image" content='https://lh3.googleusercontent.com/pw/AM-JKLWHRueiA0_hXLfayDQ3jSWFCwyYvs9et9-Zr6CvRJTg7NjaGoDeUtA_-ljXAejq59AX31qA5rK24wq-6Kaw08wJK3AR5Gw4ov2OLDvdFKHGogPbrefTpyAQZz8Z1W64TufxuqhmJZLvRMdOHu9301C-zg=w2073-h1166-no?authuser=0' />
     <link rel="shortcut icon" href="/ico/sword.png" />
 
-<script type="application/javascript">
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-KLK0L2ZM78"></script>
+<script>
 var doNotTrack = false;
 if (!doNotTrack) {
-	(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-	ga('create', 'UA-131269345-3', 'auto');
-	
-	ga('send', 'pageview');
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
+	gtag('config', 'G-KLK0L2ZM78', { 'anonymize_ip': false });
 }
-</script><style>
+</script>
+<style>
     :root {
         --sys-font-family: "New Tegomin", -apple-system, BlinkMacSystemFont, "Segoe UI", "Droid Sans", "Helvetica Neue";
         --article-font-family: "Noto Serif TC", var(--base-font-family);
@@ -57,6 +56,8 @@ if (!doNotTrack) {
 		    document.head.appendChild(customFont);
 		}());
 </script>
+
+
     </head>
     <body class="
     article-page has-toc
