--- a/note/dockerInstall/index.html
+++ b/note/dockerInstall/index.html
@@ -288,7 +288,7 @@ newgrp docker
         
 
         <div class="article-details">
-            <h2 class="article-title">紅魔族LateX符文記事簿-pseudo code篇</h2>
+            <h2 class="article-title">紅魔族LaTeX符文記事簿-pseudo code篇</h2>
         </div>
     </a>
 </article>
