--- a/note/LaTexPseudoCode/index.html
+++ b/note/LaTexPseudoCode/index.html
@@ -164,6 +164,7 @@ if (!doNotTrack) {
 怎麼個爆法呢?<br>
 首先<code>algpseudocode</code> 或 <code>algcompatible</code> 或 <code>algorithmic</code>這三種咒文來自同一個體系，但有個主要的不同，<code>algorithmic</code> 的咒文全是大寫的(例如： <code>\WHILE</code> 、 <code>\ENDWHILE</code> 、 <code>\STATE</code>)，但 <code>algpseudocode</code> 的咒文只有首字要大寫(<code>\While</code> 、 <code>\EndWhile</code> 、 <code>\State</code>)。 <code>algcompatible</code> 則是設計成兩種咒文皆能使用，但&hellip;有時會不靈光，所以──你知道ㄉ<br>
 <code>algorithm2e</code> 則設計給 $\LaTeX2e$ 使用，是完全不同的東西。</p>
+<p>本文主要會講 <code>algpseudocode</code> 流，因為這是本大魔法師所在的區域最常用的咒文~~</p>
 <h2 id="algorithm--algpseudocode">algorithm + algpseudocode</h2>
 <p>要用這個流派來畫魔法陣，基底是</p>
 <pre tabindex="0"><code>\usepackage{algorithm} 
